--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@
 
 === Integriert in die OOP2-Projekte von
 
-* *_Ergänzen Sie hier welche OOP2-Teams Ihr Projekt erfolgreich integriert haben._*
+* _Haussener Fabio_
 
 === Abgabe
 
